--- a/template/horizontal/horizontal.html
+++ b/template/horizontal/horizontal.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="./horizontal.css">
     </head>
     <body>
-        <!-- slideshow 
-        ----------------------------------------------->
+        <!--the complexity of this template is the fact that it allows to create slides and navigation elements centered vertically and horizontally. -->
+        
+        <!-- slideshow  -->
         <div class="slideshow">
                 
             <a href="#" class="button first">bt</a>
@@ -61,7 +62,6 @@
                 </div>
             </div>
         </div>
-        <!-- end slideshow 
-        ----------------------------------------------->
+        <!-- end slideshow -->
     </body>
 </html>
