--- a/template/vertical/vertical.html
+++ b/template/vertical/vertical.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="./vertical.css">
     </head>
     <body>
-        <!-- slideshow 
-        ----------------------------------------------->
+        <!--the complexity of this template is the fact that it allows to create slides and navigation elements centered vertically and horizontally. -->
+        
+        <!-- slideshow -->
         <div class="slideshow">
             
             <div class='slides'>
@@ -147,7 +148,6 @@
                 </div>
             </div>
         </div>
-        <!-- end slideshow 
-        ----------------------------------------------->
+        <!-- end slideshow -->
     </body>
 </html>
