--- a/site/basic/basic.css
+++ b/site/basic/basic.css
@@ -1,30 +1,36 @@
-/* slideshow (see template horizontal)
+/* slideshow
 ******************************************/
+.slideshow.basic{ 
+    background: #f8f8f8;
+    border-radius: 3px;
+    border: 1px solid #ddd;
+    box-shadow: 10px 10px 30px #aaa;
+}
 .slideshow.basic a:active, .slideshow.basic a:focus { 
     border:none;
     outline:none;
 }
     /* slides 
     ******************************************/
-    .slideshow.basic > .scroller{
-        overflow:  hidden;
-        width : 518px;
-        background: #f8f8f8;
-        border-radius: 3px;
-        border: 1px solid #ddd;
+    .slideshow.basic > .pad{
+        width : 500px;
+        padding : 9px;
     }
-    .slideshow.basic > .scroller > .slides{
+    .slideshow.basic > .pad > .scroller{
+        overflow: hidden;
+    }
+    .slideshow.basic > .pad > .scroller > .slides{
         display: table;
         table-layout: fixed;
         position: relative;
-        height : 60px;
         width : 0;
     }
-    .slideshow.basic > .scroller > .slides > div{
+    .slideshow.basic > .pad > .scroller > .slides > div{
         display: table-cell;
         vertical-align: middle;
         text-align: center;
         width : 500px;
+        height : 130px;
     }
     /* end slides
     ******************************************/
@@ -32,125 +38,29 @@
     /* player 
     ******************************************/
     .slideshow.basic > .player{
-        display : inline-block;
         position:relative;
-        top : 1px;
-        background: #f8f8f8;
-        border-radius: 3px;
-        border: 1px solid #ddd;
+        width : 520px;
     }
     .slideshow.basic > .player > *{
         display : inline-block;
         height : 25px;
         width : 25px;
+        position : absolute;
+        top : 55px;
         margin : 5px;
+        z-index : 1000;
         background-image: url(../image/player_horizontal.png);
         background-repeat: no-repeat;
     }
-    .slideshow.basic > .player > .disabled{
-        display : none;
-    }
-    .slideshow.basic > .player > .await{
-        opacity : 0.5;
-    }
-    .slideshow.basic > .player > .first{
-        background-position: 0 0;
-    }
     .slideshow.basic > .player > .previous{
+        left : 0;
         background-position: -25px 0px;
     }
-    .slideshow.basic > .player > .play{
-        background-position: -50px 0px;
-    }
-    .slideshow.basic > .player > .pause{
-        background-position: -75px 0px;
-    }
-    .slideshow.basic > .player > .resume{
-        background-position: -50px 0px;
-    }
-    .slideshow.basic > .player > .stop{
-        background-position: -100px 0px;
-    }
     .slideshow.basic > .player > .next{
+        right : 0;
         background-position: -125px 0px;
     }
-    .slideshow.basic > .player > .last{
-        background-position: -150px 0px;
-    }
     /* end player
-    ******************************************/
-
-    /* navigation 
-    ******************************************/
-    .slideshow.basic > .navigation{
-        position:relative;
-        width : 518px;
-        height : 35px;
-        top : -1px;
-        background: #f8f8f8;
-        border-radius: 3px;
-        border: 1px solid #ddd;
-    }
-    .slideshow.basic > .navigation > *{
-        float : left;
-    }
-        /* navigation scroller & items
-        ******************************************/
-        .slideshow.basic > .navigation > .scroller{
-            width : 378px;
-            overflow: hidden;
-        }
-        .slideshow.basic > .navigation > .scroller > div{
-            display: table;
-            table-layout: fixed;
-            width : 0;/*important disable auto width*/
-        }
-        .slideshow.basic > .navigation > .scroller > div > a{
-            display: table-cell;
-            vertical-align: middle;
-            overflow:  hidden;
-            text-align: center;
-            width : 42px;
-            height : 35px;
-        }
-        .slideshow.basic > .navigation > .scroller > div > .selected{
-            background-color: greenyellow;
-        }
-        .slideshow.basic > .navigation > .scroller > div > .scrolled{
-            background-color: graytext;
-        }
-        .slideshow.basic > .navigation > .scroller > div > .await{
-            opacity : 0.5;
-        }
-        
-        /* end navigation scroller & items
-        ******************************************/
-
-        /* navigation button
-        ******************************************/
-        .slideshow.basic > .navigation > a{
-            width : 25px;
-            height : 25px;
-            margin : 5px;
-            background-image: url(../image/player_horizontal.png);
-            background-repeat: no-repeat;
-            background-position: center;
-        }
-        .slideshow.basic > .navigation > .first{
-            background-position: 0 0;
-        }
-        .slideshow.basic > .navigation > .previous{
-            background-position: -25px 0px;
-        }
-        .slideshow.basic > .navigation > .next{
-            background-position: -125px 0px;
-        }
-        .slideshow.basic > .navigation > .last{
-            background-position: -150px 0px;
-        }
-        /* end navigation button
-        ******************************************/
-    /* end navigation
     ******************************************/
 
 /* end slideshow 
